--- a/app/styles/malas.module.css
+++ b/app/styles/malas.module.css
@@ -29,16 +29,25 @@
   padding: 10px;
 }
 
+.masukan:focus {
+  border: 1px solid blue;
+}
+
 .tombol {
   background-color: black;
   color: #fff;
   font-size: 18px;
   font-weight: bold;
   border: none;
-  border-radius: 10px;
-  padding: 10px;
+  border-radius: 12px;
+  padding: 10px 20px 10px 20px;
   cursor: pointer;
   margin: 10px 0 10px 0;
+}
+
+.tombol:hover {
+  background-color: blue;
+  font-size: 20px;
 }
 
 .klik {
@@ -51,8 +60,38 @@
   border: none;
 }
 
+.klik:hover {
+  color: red;
+  font-weight: bold;
+}
+
 .info {
   color: black;
   font-size: 18px;
+  font-weight: bold;
+}
+
+.inputinfo {
+  color: red;
+  font-size: 14px;
   font-weight: 500;
+  margin: 5px 0 5px 0;
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
